cta-btn to download-btn

--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 
   <section id="cta">
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button class="btn btn-lg cta-btn btn-dark" type="button"> <i class="fab fa-apple"></i> Download</button>
-    <button class="btn btn-lg cta-btn btn-light" type="button"> <i class="fab fa-google-play"></i> Download</button>
+    <button class="btn btn-lg download-btn btn-dark" type="button"> <i class="fab fa-apple"></i> Download</button>
+    <button class="btn btn-lg download-btn btn-light" type="button"> <i class="fab fa-google-play"></i> Download</button>
   </section>
 
 
