--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <i class="social-icon fab fa-twitter"></i>
     <i class="social-icon fab fa-instagram"></i>
     <i class="social-icon fas fa-envelope"></i>
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2020 TinDog <br> by dPrince 👑</p>
 
   </footer>
 
